task_migration/baseline_tm/gateway-baseline.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: baseline-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8001
      name: http-8001
      protocol: HTTP
    hosts:
    - "*"
