task_migration/baseline_tm/virtual-service-baseline.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: baseline-vs
  namespace: default
spec:
  hosts:
  - "*"                       
  gateways:
  - baseline-gateway
  http:
  - match:
    - uri:
        prefix: "/"             
    route:
    - destination:
        host: flask-task-service-baseline
        port:
          number: 8001
